FLY wire David/force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <description>Integration information for the product.</description>
    <label>Integration</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Integration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>