FLY wire David/force-app/main/default/objects/Integration__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <inlineHelpText>Select which product type this integration is.</inlineHelpText>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payex</fullName>
            </value>
            <value>
                <fullName>Embed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>