FLY wire David/force-app/main/default/objects/Integration__c/fields/Accom_Guaranteed_Pymnt_w_Amnt_Changed__c.field-meta.xml
<CustomField>
    <fullName>Accom_Guaranteed_Pymnt_w_Amnt_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accom Guaranteed Pymnt w/ Amnt Changed?</label>
    <type>Checkbox</type>
</CustomField>