FLY wire David/force-app/main/default/objects/Integration__c/fields/Accom_Payment_On_Hold_then_Successful__c.field-meta.xml
<CustomField>
    <fullName>Accom_Payment_On_Hold_then_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accom Payment On Hold, then Successful?</label>
    <type>Checkbox</type>
</CustomField>