FLY wire David/force-app/main/default/objects/Integration__c/fields/Accom_Re_initiated_Payments__c.field-meta.xml
<CustomField>
    <fullName>Accom_Re_initiated_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accom Re-initiated Payments?</label>
    <type>Checkbox</type>
</CustomField>