FLY wire David/force-app/main/default/objects/Integration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client Account this Integration is for.</description>
    <inlineHelpText>Enter the Client Account name this Integration is for.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>