FLY wire David/force-app/main/default/objects/Integration__c/fields/ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processor__c</fullName>
    <description>Clients ACH Processor or Bank Name</description>
    <inlineHelpText>Clients ACH Processor or Bank Name</inlineHelpText>
    <label>ACH Processor</label>
    <length>180</length>
    <type>Text</type>
</CustomField>