FLY wire David/force-app/main/default/objects/Integration__c/fields/Action_taken_on_which_status__c.field-meta.xml
<CustomField>
    <fullName>Action_taken_on_which_status__c</fullName>
    <label>Action taken on which status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>