FLY wire David/force-app/main/default/objects/Integration__c/fields/Actual_Go_live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_live_Date__c</fullName>
    <description>Date we completed the integration.</description>
    <inlineHelpText>Enter completed integration.</inlineHelpText>
    <label>Actual Go-live Date</label>
    <type>Date</type>
</CustomField>