FLY wire David/force-app/main/default/objects/Integration__c/fields/Amount_Config__c.field-meta.xml
<CustomField>
    <fullName>Amount_Config__c</fullName>
    <label>Amount Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uneditable</fullName>
            </value>
            <value>
                <fullName>Editable</fullName>
            </value>
            <value>
                <fullName>Max Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>