FLY wire David/force-app/main/default/objects/Integration__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <label>Callback URL</label>
    <length>180</length>
    <type>Text</type>
</CustomField>