FLY wire David/force-app/main/default/objects/Integration__c/fields/CC_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>CC_Service_Fee__c</fullName>
    <description>Service Fee for credit card payments</description>
    <inlineHelpText>Enter Service Fee for credit card payments</inlineHelpText>
    <label>CC Service Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>