FLY wire David/force-app/main/default/objects/Integration__c/fields/Code_Block__c.field-meta.xml
<CustomField>
    <fullName>Code_Block__c</fullName>
    <description>Collects example code block</description>
    <inlineHelpText>Collects example code block</inlineHelpText>
    <label>Code Block</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>