FLY wire David/force-app/main/default/objects/Integration__c/fields/Credit_Card_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processor__c</fullName>
    <description>Enter the CC processor</description>
    <inlineHelpText>Enter the CC processor if applicable</inlineHelpText>
    <label>Credit Card Processor</label>
    <length>180</length>
    <type>Text</type>
</CustomField>