FLY wire David/force-app/main/default/objects/Integration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>1-2 sentence description of how integration works.</description>
    <inlineHelpText>Enter 1-2 sentence description of how integration works.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>