FLY wire David/force-app/main/default/objects/Integration__c/fields/Disable_payment_details_edit__c.field-meta.xml
<CustomField>
    <fullName>Disable_payment_details_edit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable payment details edit</inlineHelpText>
    <label>Disable payment details edit</label>
    <type>Checkbox</type>
</CustomField>