FLY wire David/force-app/main/default/objects/Integration__c/fields/Disallow_Cloning__c.field-meta.xml
<CustomField>
    <fullName>Disallow_Cloning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disallow Cloning</inlineHelpText>
    <label>Disallow Cloning</label>
    <type>Checkbox</type>
</CustomField>