FLY wire David/force-app/main/default/objects/Integration__c/fields/Discovery_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Form_Link__c</fullName>
    <inlineHelpText>Add URL for Discovery Form Link</inlineHelpText>
    <label>Discovery Form Link</label>
    <type>Url</type>
</CustomField>