FLY wire David/force-app/main/default/objects/Integration__c/fields/Dynamic_Link__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Link__c</fullName>
    <description>Collects example dynamic link</description>
    <inlineHelpText>Collects example dynamic link</inlineHelpText>
    <label>Dynamic Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>