FLY wire David/force-app/main/default/objects/Integration__c/fields/Email_reconciliation_file_as_attachment__c.field-meta.xml
<CustomField>
    <fullName>Email_reconciliation_file_as_attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Email reconciliation file as attachment?</inlineHelpText>
    <label>Email reconciliation file as attachment?</label>
    <type>Checkbox</type>
</CustomField>