FLY wire David/force-app/main/default/objects/Integration__c/fields/Embed_Placement__c.field-meta.xml
<CustomField>
    <fullName>Embed_Placement__c</fullName>
    <label>Embed Placement</label>
    <type>Url</type>
</CustomField>