FLY wire David/force-app/main/default/objects/Integration__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint</description>
    <inlineHelpText>Endpoint</inlineHelpText>
    <label>Endpoint</label>
    <length>180</length>
    <type>Text</type>
</CustomField>