FLY wire David/force-app/main/default/objects/Integration__c/fields/Est_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Live_Date__c</fullName>
    <description>Estimate when Planned Go-live Date</description>
    <inlineHelpText>Enter Date you expect the Integration to Go-live</inlineHelpText>
    <label>Est. Live Date</label>
    <type>Date</type>
</CustomField>