FLY wire David/force-app/main/default/objects/Integration__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TXT</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>DAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>