FLY wire David/force-app/main/default/objects/Integration__c/fields/Flywire_Accessed_via__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Accessed_via__c</fullName>
    <label>Flywire Accessed via</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>