FLY wire David/force-app/main/default/objects/Integration__c/fields/Initial_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Live_Date__c</fullName>
    <description>Project Go-live date established at kick-off</description>
    <inlineHelpText>Project Go-live date established at kick-off</inlineHelpText>
    <label>Initial Live Date</label>
    <type>Date</type>
</CustomField>