FLY wire David/force-app/main/default/objects/Integration__c/fields/Integrated_Only__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Integrated Only</inlineHelpText>
    <label>Integrated Only</label>
    <type>Checkbox</type>
</CustomField>