FLY wire David/force-app/main/default/objects/Integration__c/fields/Integrated_Only_URL__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Only_URL__c</fullName>
    <label>Integrated Only URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>