FLY wire David/force-app/main/default/objects/Integration__c/fields/Integration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Integration_Stage__c</fullName>
    <description>How for along in the integration process is this integration.</description>
    <inlineHelpText>Select at what stage the integration for this client is at.</inlineHelpText>
    <label>Integration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Assessing Need</fullName>
            </value>
            <value>
                <fullName>Awaiting Scheduling</fullName>
                <default>true</default>
                <label>Awaiting Scheduling</label>
            </value>
            <value>
                <fullName>Discovery Call Complete</fullName>
            </value>
            <value>
                <fullName>Project Kick-off</fullName>
            </value>
            <value>
                <fullName>Configuration Phase</fullName>
            </value>
            <value>
                <fullName>Testing Phase</fullName>
            </value>
            <value>
                <fullName>Go-Live Prep</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
                <isActive>false</isActive>
                <label>Troubleshooting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>