FLY wire David/force-app/main/default/objects/Integration__c/fields/Integration_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status_Date__c</fullName>
    <description>Auto Capture Date for current Stage.</description>
    <inlineHelpText>Auto Capture Date for current Stage.</inlineHelpText>
    <label>Integration Status Date</label>
    <type>Date</type>
</CustomField>