FLY wire David/force-app/main/default/objects/Integration__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>Select the type of Integration we are doing.</description>
    <inlineHelpText>Select the type of Integration we are doing.</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callbacks</fullName>
            </value>
            <value>
                <fullName>Custom File</fullName>
            </value>
            <value>
                <fullName>Intelligent Link</fullName>
            </value>
            <value>
                <fullName>Internal Redirects</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>Landing Pages</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>