FLY wire David/force-app/main/default/objects/Integration__c/fields/IP_Addresses__c.field-meta.xml
<CustomField>
    <fullName>IP_Addresses__c</fullName>
    <description>Encrypted field - IP Address</description>
    <inlineHelpText>Encrypted field - IP Address</inlineHelpText>
    <label>IP Addresses</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>