FLY wire David/force-app/main/default/objects/Integration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity Record that authorizes the integration.</description>
    <inlineHelpText>Opportunity that authorizes the integration. Filled in automatically using Prod Config record&apos;s Opp.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>