FLY wire David/force-app/main/default/objects/Integration__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the integration - a Solutions Team member.</description>
    <inlineHelpText>Owner of the integration.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>