FLY wire David/force-app/main/default/objects/Integration__c/fields/Owner_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Current_User__c</fullName>
    <description>Use for My Account List views. The logged in user will see only their records.</description>
    <formula>IF(OwnerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for My Account List views. The logged in user will see only their records.</inlineHelpText>
    <label>Owner is Current User</label>
    <type>Checkbox</type>
</CustomField>