FLY wire David/force-app/main/default/objects/Integration__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Partner Account record type to associate this clients integration with the payment partner.</description>
    <inlineHelpText>Enter the Partner account this clients integration is using.</inlineHelpText>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Payment Service Provider, Strategic Partner, Bank Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations (Partner Account)</relationshipLabel>
    <relationshipName>PartnerIntegrations</relationshipName>
    <type>Lookup</type>
</CustomField>