FLY wire David/force-app/main/default/objects/Integration__c/fields/Partner_System_Version__c.field-meta.xml
<CustomField>
    <fullName>Partner_System_Version__c</fullName>
    <label>Partner System Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>