FLY wire David/force-app/main/default/objects/Integration__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Collects example payload  (for information being passed)</description>
    <inlineHelpText>Collects example payload  (for information being passed)</inlineHelpText>
    <label>Payload</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>