FLY wire David/force-app/main/default/objects/Integration__c/fields/Points_to__c.field-meta.xml
<CustomField>
    <fullName>Points_to__c</fullName>
    <label>Points to</label>
    <type>Url</type>
</CustomField>