FLY wire David/force-app/main/default/objects/Integration__c/fields/Prod_Config_Product__c.field-meta.xml
<CustomField>
    <fullName>Prod_Config_Product__c</fullName>
    <formula>Product_Configuration__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod Config - Product</label>
    <type>Text</type>
</CustomField>