FLY wire David/force-app/main/default/objects/Integration__c/fields/Product_Component__c.field-meta.xml
<CustomField>
    <fullName>Product_Component__c</fullName>
    <label>Product Component</label>
    <length>180</length>
    <type>Text</type>
</CustomField>