FLY wire David/force-app/main/default/objects/Integration__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Product Configuration record this integration is for.</description>
    <inlineHelpText>Select the Product Configuration record this integration is for.</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>Product_Configuration__c</referenceTo>
    <relationshipLabel>Integration</relationshipLabel>
    <relationshipName>Integration</relationshipName>
    <type>Lookup</type>
</CustomField>