FLY wire David/force-app/main/default/objects/Integration__c/fields/Project_Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Kick_Off_Date__c</fullName>
    <description>Date field to capture start of Implementation project work.</description>
    <inlineHelpText>Enter Date you are at Stage &quot;Project Kick-Off&apos;</inlineHelpText>
    <label>Project Kick-Off Date</label>
    <type>Date</type>
</CustomField>