FLY wire David/force-app/main/default/objects/Integration__c/fields/Project_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Link__c</fullName>
    <inlineHelpText>URL to the Project Plan</inlineHelpText>
    <label>Project Plan Link</label>
    <type>Url</type>
</CustomField>