FLY wire David/force-app/main/default/objects/Integration__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>180</length>
    <type>Text</type>
</CustomField>