FLY wire David/force-app/main/default/objects/Integration__c/fields/Reconciliation_Method__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Method__c</fullName>
    <label>Reconciliation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Readable</fullName>
            </value>
            <value>
                <fullName>System Readable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>