FLY wire David/force-app/main/default/objects/Integration__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <description>Grab RM Name from Prod Config</description>
    <formula>Product_Configuration__r.Config_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grab RM Name from Prod Config</inlineHelpText>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>