FLY wire David/force-app/main/default/objects/Integration__c/fields/Retrieval_Time__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Time__c</fullName>
    <inlineHelpText>Please use HH:MM format.</inlineHelpText>
    <label>Retrieval Time</label>
    <type>Time</type>
</CustomField>