FLY wire David/force-app/main/default/objects/Integration__c/fields/Retrieval_Type__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Type__c</fullName>
    <label>Retrieval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pull (Flywire Hosted)</fullName>
            </value>
            <value>
                <fullName>Push (Client Hosted)</fullName>
            </value>
            <value>
                <fullName>Email Attachment</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>