FLY wire David/force-app/main/default/objects/Integration__c/fields/Return_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Return_Button_Name__c</fullName>
    <label>Return Button Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>