FLY wire David/force-app/main/default/objects/Integration__c/fields/Return_Button_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_Button_URL__c</fullName>
    <label>Return Button URL</label>
    <type>Url</type>
</CustomField>