FLY wire David/force-app/main/default/objects/Integration__c/fields/School_System__c.field-meta.xml
<CustomField>
    <fullName>School_System__c</fullName>
    <description>System(s) being integrated with</description>
    <inlineHelpText>System(s) being integrated with</inlineHelpText>
    <label>School System</label>
    <type>TextArea</type>
</CustomField>