FLY wire David/force-app/main/default/objects/Integration__c/fields/SFTP__c.field-meta.xml
<CustomField>
    <fullName>SFTP__c</fullName>
    <description>Select where the payment files are hosted. This does not apply to Document Collector files.</description>
    <inlineHelpText>Select where the payment files are hosted. This does not apply to Document Collector files.</inlineHelpText>
    <label>SFTP Host</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Hosted</fullName>
            </value>
            <value>
                <fullName>Flywire Hosted</fullName>
            </value>
            <value>
                <fullName>Third Party Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>