FLY wire David/force-app/main/default/objects/Integration__c/fields/SFTP_Address__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Address__c</fullName>
    <description>SFTP Address (Production)</description>
    <inlineHelpText>SFTP Address (Production)</inlineHelpText>
    <label>SFTP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>