FLY wire David/force-app/main/default/objects/Integration__c/fields/SFTP_Remote_Path__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Remote_Path__c</fullName>
    <description>SFTP Remote Path (Production)</description>
    <inlineHelpText>SFTP Remote Path (Production)</inlineHelpText>
    <label>SFTP Remote Path</label>
    <length>180</length>
    <type>Text</type>
</CustomField>