FLY wire David/force-app/main/default/objects/Integration__c/fields/SFTP_Username__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Username__c</fullName>
    <description>SFTP Username (Production)</description>
    <inlineHelpText>SFTP Username (Production)</inlineHelpText>
    <label>SFTP Username</label>
    <length>180</length>
    <type>Text</type>
</CustomField>