FLY wire David/force-app/main/default/objects/Integration__c/fields/Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret__c</fullName>
    <label>Shared Secret</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>