FLY wire David/force-app/main/default/objects/Integration__c/fields/SSH_RSA_Keys__c.field-meta.xml
<CustomField>
    <fullName>SSH_RSA_Keys__c</fullName>
    <inlineHelpText>Encrypted field - SSH RSA Keys</inlineHelpText>
    <label>SSH RSA Keys</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>