FLY wire David/force-app/main/default/objects/Integration__c/fields/Student_Information_System__c.field-meta.xml
<CustomField>
    <fullName>Student_Information_System__c</fullName>
    <description>SIS from the Account record</description>
    <formula>TEXT(Account__r.Student_Information_System__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SIS as listed on the related Account record.</inlineHelpText>
    <label>Student Information System</label>
    <type>Text</type>
</CustomField>