FLY wire David/force-app/main/default/objects/Integration__c/fields/Takes_Action_On__c.field-meta.xml
<CustomField>
    <fullName>Takes_Action_On__c</fullName>
    <label>Takes Action On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>