FLY wire David/force-app/main/default/objects/Integration__c/fields/X10_Post_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>X10_Post_Go_Live__c</fullName>
    <description>Capture Date Integration stage went to Post Go-Live.</description>
    <inlineHelpText>Capture Date Integration stage went to Post Go-Live.</inlineHelpText>
    <label>10 Post Go-Live</label>
    <type>Date</type>
</CustomField>