FLY wire David/force-app/main/default/objects/Integration__c/fields/X1_Pre_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>X1_Pre_Sales_Date__c</fullName>
    <description>Capture Date Integration stage went to Pre -Sales.</description>
    <inlineHelpText>Capture Date Integration stage went to Pre -Sales.</inlineHelpText>
    <label>1 Pre-Sales Date</label>
    <type>Date</type>
</CustomField>