FLY wire David/force-app/main/default/objects/Integration__c/fields/X2_Assessing_Need__c.field-meta.xml
<CustomField>
    <fullName>X2_Assessing_Need__c</fullName>
    <description>Capture Date Integration stage went to Accessing Need.</description>
    <inlineHelpText>Capture Date Integration stage went to Accessing Need.</inlineHelpText>
    <label>2 Assessing Need</label>
    <type>Date</type>
</CustomField>