FLY wire David/force-app/main/default/objects/Integration__c/fields/X3_Awaiting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>X3_Awaiting_Schedule__c</fullName>
    <description>Capture Date Integration stage went to Awaiting Schedule.</description>
    <inlineHelpText>Capture Date Integration stage went to Awaiting Schedule.</inlineHelpText>
    <label>3 Awaiting Schedule</label>
    <type>Date</type>
</CustomField>