FLY wire David/force-app/main/default/objects/Integration__c/fields/X4_Discovery_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>X4_Discovery_Call_Date__c</fullName>
    <description>Capture Date Integration stage went to Discovery Call</description>
    <inlineHelpText>Capture Date Integration stage went to Discovery Call</inlineHelpText>
    <label>4 Discovery Call Date</label>
    <type>Date</type>
</CustomField>