FLY wire David/force-app/main/default/objects/Integration__c/fields/X6_Configuration_Phase_Date__c.field-meta.xml
<CustomField>
    <fullName>X6_Configuration_Phase_Date__c</fullName>
    <description>Capture Date Integration stage went to Configuration Phase.</description>
    <inlineHelpText>Capture Date Integration stage went to Configuration Phase.</inlineHelpText>
    <label>6 Configuration Phase Date</label>
    <type>Date</type>
</CustomField>