FLY wire David/force-app/main/default/objects/Integration__c/fields/X7_Testing_Phase__c.field-meta.xml
<CustomField>
    <fullName>X7_Testing_Phase__c</fullName>
    <description>Capture Date Integration stage went to Testing Phase.</description>
    <inlineHelpText>Capture Date Integration stage went to Testing Phase.</inlineHelpText>
    <label>7 Testing Phase</label>
    <type>Date</type>
</CustomField>