FLY wire David/force-app/main/default/objects/Integration__c/fields/X8_Go_Live_Prep__c.field-meta.xml
<CustomField>
    <fullName>X8_Go_Live_Prep__c</fullName>
    <description>Capture Date Integration stage went to Go-Live Prep.</description>
    <inlineHelpText>Capture Date Integration stage went to Go-Live Prep.</inlineHelpText>
    <label>8 Go-Live Prep</label>
    <type>Date</type>
</CustomField>