FLY wire David/force-app/main/default/objects/Integration__c/fields/Zero_Balance_Notification__c.field-meta.xml
<CustomField>
    <fullName>Zero_Balance_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Zero Balance Notification</inlineHelpText>
    <label>Zero Balance Notification</label>
    <type>Checkbox</type>
</CustomField>