FLY wire David/force-app/main/default/objects/Integration__c/recordTypes/Comprehensive_Receivables.recordType-meta.xml
<RecordType>
    <fullName>Comprehensive_Receivables</fullName>
    <active>true</active>
    <description>Comprehensive Receivables (CRS) Integration Records</description>
    <label>Comprehensive Receivables</label>
</RecordType>