FLY wire David/force-app/main/default/objects/Integration__c/recordTypes/Incoming_Payment_Portal.recordType-meta.xml
<RecordType>
    <fullName>Incoming_Payment_Portal</fullName>
    <active>true</active>
    <description>Integration Record for Flywire Incoming Payment Portal</description>
    <label>Incoming Payment Portal</label>
</RecordType>